@@ -1,3 +1,7 @@
+Thu Dec  5 17:28:31 2002  Anthony Green  <green@redhat.com>
+
+	* index.html: Cygnus is now Red Hat.
+
 1999-05-12  Jason Molenda  (jsm@bugshack.cygnus.com)
 
 	* index.html: Add links to libffi* mail list archives.
